--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="about">
       <div class="info">
-          <img src="img/cuong.jpg" class="avatar">
+          <img src="img/thong.jpg" class="avatar">
           <div class="details">
             <p class="name">Bé Ciu Moè Gầy</p>
             <p class="born">15.06.1999</p>
